# vlc

./: .gitignore  CMakeLists.txt  main.cpp
src/: BufferReader.cpp  BufferReader.h  DvdReader.cpp  DvdReader.h  HLS.cpp  HLS.h  Utils.cpp  Utils.h  vlc.cpp  vlc.h
